--- a/.github/workflows/cd-workflow.yml
+++ b/.github/workflows/cd-workflow.yml
@@ -1,6 +1,12 @@
 # This file wont do us much good in this location, make sure you change the path as directed to continue!
 
 name: Docker CD
+on:
+  push:
+    paths:
+      - "**Dockerfile**"
+jobs:
+
   Build-and-Push-Docker-Image:
     runs-on: ubuntu-latest
     needs: test
@@ -22,4 +28,31 @@ name: Docker CD
         registry: docker.pkg.github.com
         repository: jaypatel31/github-actions-for-packages/tic-tac-toe
         tag_with_sha: true
+        
+  test:
+      runs-on: ubuntu-latest
+      needs: Build-and-Push-Docker-Image
+      strategy:
+        matrix:
+          os: [ubuntu-lastest, windows-2016]
+          node-version: [12.x, 14.x]
+
+      steps:
+        - uses: actions/checkout@v1
+        - name: Use Node.js ${{ matrix.node-version }}
+          uses: actions/setup-node@v1
+          with:
+            node-version: ${{ matrix.node-version }}
+        - uses: actions/download-artifact@master
+          with:
+            name: webpack artifacts
+            path: public
+        - name: npm install, and test
+          run: |
+            npm install
+            npm test
+          env:
+            CI: true
+
+
 
